--- a/package.json
+++ b/package.json
@@ -7,14 +7,14 @@
     "start": "ng serve",
     "build": "ng build",
     "build:lib": "ng build @swimlane/ngx-graph",
-    "build:lib:prod": "ng build @swimlane/ngx-graph --prod",
+    "build:lib:prod": "ng build @swimlane/ngx-graph --configuration production",
     "test": "npm run lint",
     "lint": "ng lint",
     "e2e": "ng e2e",
     "prettier": "prettier --write \"{src,projects}/**/*.{js,ts,scss,css,md,json}\"",
     "prettier:ci": "prettier --check  \"{src,projects}/**/*.{js,ts,scss,css,md,json}\"",
     "copy-files": "cp README.md projects/dist/ngx-graph/README.md && cp LICENSE projects/dist/ngx-graph/LICENSE",
-    "build-docs": "cross-env NODE_ENV=production ng build --prod --no-aot --no-build-optimizer --base-href=\"/ngx-graph/\"",
+    "build-docs": "cross-env NODE_ENV=production ng build --configuration production --no-aot --no-build-optimizer --base-href=\"/ngx-graph/\"",
     "predeploy-docs": "npm run build-docs",
     "deploy-docs": "angular-cli-ghpages --dir ./dist/ngxGraph",
     "ci": "run-s lint prettier:ci",
@@ -28,16 +28,16 @@
   },
   "license": "MIT",
   "dependencies": {
-    "@angular/animations": "^11.0.4",
+    "@angular/animations": "^12.2.10",
     "@angular/cdk": "^10.2.1",
-    "@angular/common": "^11.0.4",
-    "@angular/compiler": "^11.0.4",
-    "@angular/core": "^11.0.4",
-    "@angular/elements": "^11.0.4",
-    "@angular/forms": "^11.0.4",
-    "@angular/platform-browser": "^11.0.4",
-    "@angular/platform-browser-dynamic": "^11.0.4",
-    "@angular/router": "^11.0.4",
+    "@angular/common": "^12.2.10",
+    "@angular/compiler": "^12.2.10",
+    "@angular/core": "^12.2.10",
+    "@angular/elements": "^12.2.10",
+    "@angular/forms": "^12.2.10",
+    "@angular/platform-browser": "^12.2.10",
+    "@angular/platform-browser-dynamic": "^12.2.10",
+    "@angular/router": "^12.2.10",
     "@ngx-loading-bar/core": "^4.2.0",
     "@ngx-loading-bar/http-client": "^4.2.0",
     "@stackblitz/sdk": "^1.2.0",
@@ -70,18 +70,18 @@
     "smoothscroll-polyfill": "^0.4.3",
     "throttleit": "^1.0.0",
     "transformation-matrix": "^1.15.3",
-    "tslib": "^2.0.0",
+    "tslib": "^2.3.1",
     "url-resolve": "^1.0.0",
     "vfile": "^4.0.0",
     "vfile-reporter": "^5.1.1",
     "webcola": "^3.3.8",
-    "zone.js": "~0.10.2"
+    "zone.js": "~0.11.4"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.1100.4",
-    "@angular/cli": "^11.0.4",
-    "@angular/compiler-cli": "^11.0.4",
-    "@angular/language-service": "^11.0.4",
+    "@angular-devkit/build-angular": "~12.2.10",
+    "@angular/cli": "^12.2.10",
+    "@angular/compiler-cli": "^12.2.10",
+    "@angular/language-service": "^12.2.10",
     "@babel/core": "^7.7.7",
     "@swimlane/prettier-config-swimlane": "^3.0.2",
     "@types/jasmine": "~3.6.0",
@@ -96,12 +96,12 @@
     "husky": "^4.2.4",
     "jasmine-core": "~3.6.0",
     "jasmine-spec-reporter": "~5.0.0",
-    "karma": "~5.1.1",
+    "karma": "~6.3.4",
     "karma-chrome-launcher": "~3.1.0",
     "karma-coverage-istanbul-reporter": "~3.0.2",
     "karma-jasmine": "~4.0.0",
     "karma-jasmine-html-reporter": "^1.5.0",
-    "ng-packagr": "^11.0.3",
+    "ng-packagr": "^12.2.4",
     "npm-run-all": "^4.1.5",
     "prettier": "^2.0.4",
     "pretty-quick": "^2.0.1",
@@ -111,7 +111,7 @@
     "tslint": "~6.1.0",
     "tslint-config-prettier": "^1.17.0",
     "tslint-config-swimlane": "^5.0.0",
-    "typescript": "~4.0.5"
+    "typescript": "~4.3.5"
   },
   "browser": {
     "fs": false,
