--- a/.github/workflows/test_and_deploy.yml
+++ b/.github/workflows/test_and_deploy.yml
@@ -9,20 +9,20 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v2
         with:
-          node-version: 12.x
+          node-version: 14.x
 
       - name: Install
         uses: bahmutov/npm-install@v1
 
       - name: Build
         run: |
-          npm run build --if-present
+          node --max-old-space-size=4096 `which npm` run build --if-present
         env:
           CI: true
 
       - name: Test
         run: |
-          npm run ci --if-present
+          node --max-old-space-size=4096 `which npm` run ci --if-present
         env:
           CI: true
 
