--- a/projects/swimlane/ngx-graph/package.json
+++ b/projects/swimlane/ngx-graph/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@swimlane/ngx-graph",
-  "version": "8.0.0-rc.1",
+  "version": "8.0.0",
   "description": "Graph visualization for angular",
   "repository": {
     "type": "git",
@@ -29,10 +29,10 @@
   },
   "homepage": "https://github.com/swimlane/ngx-graph#readme",
   "peerDependencies": {
-    "@angular/animations": "10.x || 11.x || 12.x",
-    "@angular/common": "10.x || 11.x || 12.x",
-    "@angular/core": "10.x || 11.x || 12.x",
-    "@angular/cdk": "10.x || 11.x || 12.x",
+    "@angular/animations": "10.x || 11.x || 12.x || 13.x",
+    "@angular/common": "10.x || 11.x || 12.x || 13.x",
+    "@angular/core": "10.x || 11.x || 12.x || 13.x",
+    "@angular/cdk": "10.x || 11.x || 12.x || 13.x",
     "rxjs": "6.x"
   },
   "dependencies": {
