--- a/projects/swimlane/ngx-graph/package.json
+++ b/projects/swimlane/ngx-graph/package.json
@@ -39,6 +39,7 @@
     "d3-dispatch": "^1.0.3",
     "d3-ease": "^1.0.5",
     "d3-force": "^1.1.0",
+    "d3-scale": "^3.2.3",
     "d3-selection": "^1.2.0",
     "d3-shape": "^1.2.0",
     "d3-timer": "^1.0.7",
