--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "d3-transition": "^1.1.3",
     "dagre": "^0.8.4",
     "deepmerge": "^4.2.2",
+    "json-schema": "^0.4.0",
     "mdast": "^3.0.0",
     "msagl-js": "0.0.9",
     "ngx-logger": "^4.0.8",
