add eslint and @swimlane/eslint-config

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,4 @@
 {
-    "typescript.check.workspaceVersion": false
+  "typescript.check.workspaceVersion": false,
+  "cSpell.words": ["throttleable"]
 }
