--- a/package.json
+++ b/package.json
@@ -58,9 +58,12 @@
     "d3-shape": "^1.2.2",
     "d3-timer": "^1.0.9",
     "d3-transition": "^1.1.3",
-    "dagre": "^0.8.4",
+    "dagre": "^0.8.5",
     "deepmerge": "^4.2.2",
+    "json-schema": "^0.4.0",
+    "jsprim": "^1.4.2",
     "mdast": "^3.0.0",
+    "mermaid": "^8.13.8",
     "ngx-logger": "^4.0.8",
     "path": "^0.12.7",
     "process": "^0.11.10",
