add eslint and @swimlane/eslint-config (#443)
* add eslint and @swimlane/eslint-config

* add eslint into the GH pipeline

--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "build-docs": "cross-env NODE_ENV=production ng build --configuration production --no-aot --no-build-optimizer --base-href=\"/ngx-graph/\"",
     "predeploy-docs": "npm run build-docs",
     "deploy-docs": "angular-cli-ghpages --dir ./dist/ngxGraph",
-    "ci": "run-s prettier:ci",
+    "ci": "run-s lint prettier:ci",
     "preversion": "npm run ci",
     "package": "run-s build:lib:prod copy-files",
     "prepublish:lib": "npm run package",
@@ -82,10 +82,16 @@
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~13.1.3",
+    "@angular-eslint/builder": "13.1.0",
+    "@angular-eslint/eslint-plugin": "13.1.0",
+    "@angular-eslint/eslint-plugin-template": "13.1.0",
+    "@angular-eslint/schematics": "13.1.0",
+    "@angular-eslint/template-parser": "13.1.0",
     "@angular/cli": "^13.1.3",
     "@angular/compiler-cli": "^13.1.2",
     "@angular/language-service": "^13.1.2",
     "@babel/core": "^7.7.7",
+    "@swimlane/eslint-config": "^2.0.0",
     "@swimlane/prettier-config-swimlane": "^3.0.2",
     "@types/jasmine": "~3.6.0",
     "@types/jasminewd2": "~2.0.3",
@@ -93,9 +99,14 @@
     "@types/node": "^12.12.34",
     "@types/unist": "^2.0.2",
     "@types/vfile": "^4.0.0",
+    "@typescript-eslint/eslint-plugin": "5.11.0",
+    "@typescript-eslint/parser": "5.11.0",
     "angular-cli-ghpages": "^0.6.2",
     "codelyzer": "^6.0.0",
     "cross-env": "^7.0.2",
+    "eslint": "^8.2.0",
+    "eslint-config-prettier": "^8.4.0",
+    "eslint-plugin-security": "^1.4.0",
     "husky": "^4.2.4",
     "jasmine-core": "~3.6.0",
     "jasmine-spec-reporter": "~5.0.0",
