--- a/projects/swimlane/ngx-graph/package.json
+++ b/projects/swimlane/ngx-graph/package.json
@@ -33,7 +33,7 @@
     "@angular/common": "10.x || 11.x || 12.x || 13.x",
     "@angular/core": "10.x || 11.x || 12.x || 13.x",
     "@angular/cdk": "10.x || 11.x || 12.x || 13.x",
-    "rxjs": "6.x"
+    "rxjs": "6.x || 7.x"
   },
   "dependencies": {
     "d3-dispatch": "^1.0.3",
