--- a/package.json
+++ b/package.json
@@ -54,7 +54,7 @@
     "d3-dispatch": "^1.0.5",
     "d3-ease": "^1.0.5",
     "d3-force": "^2.0.0",
-    "de-scale": "^1.3.2",
+    "d3-scale": "^1.3.2",
     "d3-selection": "^1.3.2",
     "d3-shape": "^1.2.2",
     "d3-timer": "^1.0.9",
