--- a/package.json
+++ b/package.json
@@ -44,19 +44,22 @@
     "@swimlane/docspa-core": "^8.0.1",
     "@swimlane/docspa-remark-preset": "^6.0.0",
     "@swimlane/docspa-stackblitz": "^8.0.0",
-    "@types/d3-ease": "^1.0.8",
-    "@types/d3-selection": "^1.4.1",
-    "@types/d3-shape": "^1.3.1",
-    "@types/d3-transition": "^3.0.2",
+    "@types/d3-ease": "^3.0.0",
+    "@types/d3-selection": "^3.0.5",
+    "@types/d3-shape": "^3.1.1",
+    "@types/d3-transition": "^3.0.3",
     "@ungap/custom-elements": "^0.1.12",
     "@ungap/global-this": "^0.3.1",
     "core-js": "^2.5.4",
-    "d3-dispatch": "^1.0.5",
-    "d3-ease": "^1.0.5",
-    "d3-force": "^2.0.0",
-    "d3-selection": "^1.3.2",
-    "d3-shape": "^1.2.2",
-    "d3-timer": "^1.0.9",
+    "d3-color": "^3.1.0",
+    "d3-dispatch": "^3.0.1",
+    "d3-interpolate": "3.0.1",
+    "d3-ease": "^3.0.1",
+    "d3-force": "^3.0.0",
+    "d3-scale": "4.0.2",
+    "d3-selection": "^3.0.0",
+    "d3-shape": "^3.2.0",
+    "d3-timer": "^3.0.1",
     "d3-transition": "^3.0.1",
     "dagre": "^0.8.5",
     "deepmerge": "^4.2.2",
