--- a/projects/swimlane/ngx-graph/package.json
+++ b/projects/swimlane/ngx-graph/package.json
@@ -37,13 +37,15 @@
     "rxjs": "6.x || 7.x"
   },
   "dependencies": {
-    "d3-dispatch": "^1.0.3",
-    "d3-ease": "^1.0.5",
-    "d3-force": "^1.1.0",
-    "d3-scale": "^3.2.3",
-    "d3-selection": "^1.2.0",
-    "d3-shape": "^1.2.0",
-    "d3-timer": "^1.0.7",
+    "d3-color": "^3.1.0",
+    "d3-dispatch": "^3.0.1",
+    "d3-interpolate": "3.0.1",
+    "d3-ease": "^3.0.1",
+    "d3-force": "^3.0.0",
+    "d3-scale": "4.0.2",
+    "d3-selection": "^3.0.0",
+    "d3-shape": "^3.2.0",
+    "d3-timer": "^3.0.1",
     "d3-transition": "^3.0.1",
     "dagre": "^0.8.4",
     "transformation-matrix": "^1.15.3",
