--- a/angular.json
+++ b/angular.json
@@ -150,5 +150,12 @@
       }
     }
   },
-  "defaultProject": "ngxGraph"
+  "schematics": {
+    "@angular-eslint/schematics:application": {
+      "setParserOptionsProject": true
+    },
+    "@angular-eslint/schematics:library": {
+      "setParserOptionsProject": true
+    }
+  }
 }
