--- a/package.json
+++ b/package.json
@@ -22,41 +22,44 @@
     "package": "run-s build:lib:prod copy-files",
     "prepublish:lib": "npm run package",
     "publish:lib": "npm publish projects/dist/ngx-graph",
+    "publish:next": "npm publish --tag=next projects/dist/ngx-graph",
     "publish": "run-s publish:lib deploy-docs",
-    "prepublishOnly": "echo \"This is the workspace -- you probably meant run 'npm run publish'.\" && exit 1",
-    "postinstall": "ngcc --properties es2015 browser module main --first-only --create-ivy-entry-points"
+    "prepublishOnly": "echo \"This is the workspace -- you probably meant run 'npm run publish'.\" && exit 1"
   },
   "license": "MIT",
   "dependencies": {
-    "@angular/animations": "^15.2.10",
-    "@angular/cdk": "^15.2.9",
-    "@angular/common": "^15.2.10",
-    "@angular/compiler": "^15.2.10",
-    "@angular/core": "^15.2.10",
-    "@angular/elements": "^15.2.10",
-    "@angular/forms": "^15.2.10",
-    "@angular/platform-browser": "^15.2.10",
-    "@angular/platform-browser-dynamic": "^15.2.10",
-    "@angular/router": "^15.2.10",
+    "@angular/animations": "^17.2.3",
+    "@angular/cdk": "^17.2.1",
+    "@angular/common": "^17.2.3",
+    "@angular/compiler": "^17.2.3",
+    "@angular/core": "^17.2.3",
+    "@angular/elements": "^17.2.3",
+    "@angular/forms": "^17.2.3",
+    "@angular/platform-browser": "^17.2.3",
+    "@angular/platform-browser-dynamic": "^17.2.3",
+    "@angular/router": "^17.2.3",
     "@ngx-loading-bar/core": "^4.2.0",
     "@ngx-loading-bar/http-client": "^4.2.0",
     "@stackblitz/sdk": "^1.2.0",
-    "@swimlane/docspa-core": "^8.0.1",
+    "@swimlane/docspa-core": "^8.0.3",
     "@swimlane/docspa-remark-preset": "^6.0.0",
-    "@swimlane/docspa-stackblitz": "^8.0.0",
-    "@types/d3-ease": "^1.0.8",
-    "@types/d3-selection": "^1.4.1",
-    "@types/d3-shape": "^1.3.1",
-    "@types/d3-transition": "^3.0.2",
+    "@swimlane/docspa-stackblitz": "^8.0.3",
+    "@types/d3-ease": "^3.0.0",
+    "@types/d3-selection": "^3.0.5",
+    "@types/d3-shape": "^3.1.1",
+    "@types/d3-transition": "^3.0.3",
     "@ungap/custom-elements": "^0.1.12",
     "@ungap/global-this": "^0.3.1",
     "core-js": "^2.5.4",
-    "d3-dispatch": "^1.0.5",
-    "d3-ease": "^1.0.5",
-    "d3-force": "^2.0.0",
-    "d3-selection": "^1.3.2",
-    "d3-shape": "^1.2.2",
-    "d3-timer": "^1.0.9",
+    "d3-color": "^3.1.0",
+    "d3-dispatch": "^3.0.1",
+    "d3-interpolate": "3.0.1",
+    "d3-ease": "^3.0.1",
+    "d3-force": "^3.0.0",
+    "d3-scale": "4.0.2",
+    "d3-selection": "^3.0.0",
+    "d3-shape": "^3.2.0",
+    "d3-timer": "^3.0.1",
     "d3-transition": "^3.0.1",
     "dagre": "^0.8.5",
     "deepmerge": "^4.2.2",
@@ -65,7 +68,7 @@
     "mdast": "^3.0.0",
     "mermaid": "^8.13.8",
     "msagl-js": "0.0.51",
-    "ngx-logger": "^4.0.8",
+    "ngx-logger": "^5.0.12",
     "path": "^0.12.7",
     "process": "^0.11.10",
     "quick-lru": "^4.0.1",
@@ -78,54 +81,51 @@
     "vfile": "^4.0.0",
     "vfile-reporter": "^5.1.1",
     "webcola": "^3.3.8",
-    "zone.js": "~0.11.4"
+    "zone.js": "~0.14.4"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^15.2.10",
-    "@angular-eslint/builder": "15.2.1",
-    "@angular-eslint/eslint-plugin": "15.2.1",
-    "@angular-eslint/eslint-plugin-template": "15.2.1",
-    "@angular-eslint/schematics": "15.2.1",
-    "@angular-eslint/template-parser": "15.2.1",
-    "@angular/cli": "^15.2.10",
-    "@angular/compiler-cli": "^15.2.10",
-    "@angular/language-service": "^15.2.10",
+    "@angular-devkit/build-angular": "^17.2.2",
+    "@angular-eslint/builder": "17.2.1",
+    "@angular-eslint/eslint-plugin": "17.2.1",
+    "@angular-eslint/eslint-plugin-template": "17.2.1",
+    "@angular-eslint/schematics": "17.2.1",
+    "@angular-eslint/template-parser": "17.2.1",
+    "@angular/cli": "^17.2.2",
+    "@angular/compiler-cli": "^17.2.3",
+    "@angular/language-service": "^17.2.3",
     "@babel/core": "^7.7.7",
     "@swimlane/eslint-config": "^2.0.0",
     "@swimlane/prettier-config-swimlane": "^3.0.2",
     "@types/jasmine": "~3.6.0",
     "@types/jasminewd2": "~2.0.3",
     "@types/mdast": "^3.0.3",
-    "@types/node": "^12.12.34",
+    "@types/node": "^20.11.24",
     "@types/unist": "^2.0.2",
     "@types/vfile": "^4.0.0",
-    "@typescript-eslint/eslint-plugin": "^5.43.0",
-    "@typescript-eslint/parser": "^5.43.0",
+    "@typescript-eslint/eslint-plugin": "^6.10.0",
+    "@typescript-eslint/parser": "^6.10.0",
     "angular-cli-ghpages": "^0.6.2",
     "codelyzer": "^6.0.0",
     "cross-env": "^7.0.2",
-    "eslint": "^8.28.0",
+    "eslint": "^8.53.0",
     "eslint-config-prettier": "^8.4.0",
     "eslint-plugin-security": "^1.4.0",
     "husky": "^4.2.4",
-    "jasmine-core": "~3.6.0",
+    "jasmine-core": "~3.8.0",
     "jasmine-spec-reporter": "~5.0.0",
     "karma": "~6.3.14",
     "karma-chrome-launcher": "~3.1.0",
     "karma-coverage-istanbul-reporter": "~3.0.2",
     "karma-jasmine": "~4.0.0",
     "karma-jasmine-html-reporter": "^1.5.0",
-    "ng-packagr": "^15.2.2",
+    "ng-packagr": "^17.2.1",
     "npm-run-all": "^4.1.5",
     "prettier": "^2.0.4",
     "pretty-quick": "^2.0.1",
     "protractor": "~7.0.0",
     "start-server-and-test": "^1.10.11",
     "ts-node": "^8.8.2",
-    "tslint": "~6.1.0",
-    "tslint-config-prettier": "^1.17.0",
-    "tslint-config-swimlane": "^5.0.0",
-    "typescript": "~4.8.4"
+    "typescript": "~5.3.3"
   },
   "browser": {
     "fs": false,
@@ -141,6 +141,20 @@
   "husky": {
     "hooks": {
       "pre-commit": "pretty-quick --staged"
+    }
+  },
+  "overrides": {
+    "@swimlane/docspa-core": {
+      "@angular/common": "~17.2.3",
+      "@angular/core": "~17.2.3",
+      "@angular/elements": "~17.2.3",
+      "ngx-logger": "5.0.12"
+    },
+    "@swimlane/docspa-stackblitz": {
+      "@angular/core": "~17.2.3",
+      "@swimlane/docspa-core": "8.0.3",
+      "@angular/common": "~17.2.3",
+      "ngx-logger": "5.0.12"
     }
   }
 }
