--- a/projects/swimlane/ngx-graph/package.json
+++ b/projects/swimlane/ngx-graph/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@swimlane/ngx-graph",
-  "version": "8.3.0",
+  "version": "8.4.0",
   "description": "Graph visualization for angular",
   "repository": {
     "type": "git",
@@ -30,11 +30,11 @@
   },
   "homepage": "https://github.com/swimlane/ngx-graph#readme",
   "peerDependencies": {
-    "@angular/animations": "10.x || 11.x || 12.x || 13.x || 14.x || 15.x || 16.x",
-    "@angular/common": "10.x || 11.x || 12.x || 13.x || 14.x || 15.x || 16.x",
-    "@angular/core": "10.x || 11.x || 12.x || 13.x || 14.x || 15.x || 16.x",
-    "@angular/cdk": "10.x || 11.x || 12.x || 13.x || 14.x || 15.x || 16.x",
-    "rxjs": "6.x || 7.x"
+    "@angular/animations": ">=10.0.0",
+    "@angular/common": ">=10.0.0",
+    "@angular/core": ">=10.0.0",
+    "@angular/cdk": ">=10.0.0",
+    "rxjs": ">=6.0.0"
   },
   "dependencies": {
     "d3-dispatch": "^1.0.3",
