feat: upgrade for angular 18

--- a/angular.json
+++ b/angular.json
@@ -11,8 +11,11 @@
       "schematics": {},
       "architect": {
         "build": {
-          "builder": "@angular-devkit/build-angular:browser",
+          "builder": "@angular-builders/custom-webpack:browser",
           "options": {
+            "customWebpackConfig": {
+              "path": "./webpack.config.js"
+            },
             "aot": false,
             "outputPath": "dist/ngxGraph",
             "index": "src/index.html",
