--- a/package.json
+++ b/package.json
@@ -23,21 +23,21 @@
     "prepublish:lib": "npm run package",
     "publish:lib": "npm publish projects/dist/ngx-graph",
     "publish": "run-s publish:lib deploy-docs",
-    "prepublishOnly": "echo \"This is the workspace -- you probably meant run 'npm run publish'.\" && exit 1",
-    "postinstall": "ngcc --properties es2015 browser module main --first-only --create-ivy-entry-points"
+    "prepublishOnly": "echo \"This is the workspace -- you probably meant run 'npm run publish'.\" && exit 1"
   },
   "license": "MIT",
   "dependencies": {
-    "@angular/animations": "^13.1.2",
-    "@angular/cdk": "^13.1.2",
-    "@angular/common": "^13.1.2",
-    "@angular/compiler": "^13.1.2",
-    "@angular/core": "^13.1.2",
-    "@angular/elements": "^13.1.2",
-    "@angular/forms": "^13.1.2",
-    "@angular/platform-browser": "^13.1.2",
-    "@angular/platform-browser-dynamic": "^13.1.2",
-    "@angular/router": "^13.1.2",
+    "@angular/animations": "^18.0.0",
+    "@angular/cdk": "^18.0.0",
+    "@angular/common": "^18.0.0",
+    "@angular/compiler": "^18.0.0",
+    "@angular/core": "^18.0.0",
+    "@angular/elements": "^18.0.0",
+    "@angular/flex-layout": "15.0.0-beta.42",
+    "@angular/forms": "^18.0.0",
+    "@angular/platform-browser": "^18.0.0",
+    "@angular/platform-browser-dynamic": "^18.0.0",
+    "@angular/router": "^18.0.0",
     "@ngx-loading-bar/core": "^4.2.0",
     "@ngx-loading-bar/http-client": "^4.2.0",
     "@stackblitz/sdk": "^1.2.0",
@@ -50,7 +50,8 @@
     "@types/d3-transition": "^3.0.2",
     "@ungap/custom-elements": "^0.1.12",
     "@ungap/global-this": "^0.3.1",
-    "core-js": "^2.5.4",
+    "ajv": "8.12.0",
+    "core-js": "^2.6.11",
     "d3-dispatch": "^1.0.5",
     "d3-ease": "^1.0.5",
     "d3-force": "^2.0.0",
@@ -65,11 +66,10 @@
     "mdast": "^3.0.0",
     "mermaid": "^8.13.8",
     "msagl-js": "0.0.51",
-    "ngx-logger": "^4.0.8",
     "path": "^0.12.7",
     "process": "^0.11.10",
     "quick-lru": "^4.0.1",
-    "rxjs": "^6.5.4",
+    "rxjs": "7.8.1",
     "smoothscroll-polyfill": "^0.4.3",
     "throttleit": "^1.0.0",
     "transformation-matrix": "^1.15.3",
@@ -78,34 +78,38 @@
     "vfile": "^4.0.0",
     "vfile-reporter": "^5.1.1",
     "webcola": "^3.3.8",
-    "zone.js": "~0.11.4"
+    "zone.js": "~0.14.7"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~13.1.3",
-    "@angular-eslint/builder": "13.1.0",
-    "@angular-eslint/eslint-plugin": "13.1.0",
-    "@angular-eslint/eslint-plugin-template": "13.1.0",
-    "@angular-eslint/schematics": "13.1.0",
-    "@angular-eslint/template-parser": "13.1.0",
-    "@angular/cli": "^13.1.3",
-    "@angular/compiler-cli": "^13.1.2",
-    "@angular/language-service": "^13.1.2",
+    "@angular-builders/custom-webpack": "18.0.0",
+    "@angular-devkit/build-angular": "^18.0.4",
+    "@angular-devkit/core": "^18.0.0",
+    "@angular-devkit/schematics": "^18.0.0",
+    "@angular-eslint/builder": "^18.0.0",
+    "@angular-eslint/eslint-plugin": "^18.0.0",
+    "@angular-eslint/eslint-plugin-template": "^18.0.0",
+    "@angular-eslint/schematics": "^18.0.0",
+    "@angular-eslint/template-parser": "^18.0.0",
+    "@angular/cli": "^18.0.4",
+    "@angular/compiler-cli": "^18.0.0",
+    "@angular/language-service": "^18.0.0",
     "@babel/core": "^7.7.7",
     "@swimlane/eslint-config": "^2.0.0",
     "@swimlane/prettier-config-swimlane": "^3.0.2",
     "@types/jasmine": "~3.6.0",
     "@types/jasminewd2": "~2.0.3",
     "@types/mdast": "^3.0.3",
-    "@types/node": "^12.12.34",
+    "@types/node": "22.7.3",
     "@types/unist": "^2.0.2",
     "@types/vfile": "^4.0.0",
-    "@typescript-eslint/eslint-plugin": "5.11.0",
-    "@typescript-eslint/parser": "5.11.0",
+    "@typescript-eslint/eslint-plugin": "7.18.0",
+    "@typescript-eslint/parser": "7.18.0",
+    "@typescript-eslint/utils": "7.18.0",
     "angular-cli-ghpages": "^0.6.2",
     "codelyzer": "^6.0.0",
     "cross-env": "^7.0.2",
-    "eslint": "^8.2.0",
-    "eslint-config-prettier": "^8.4.0",
+    "eslint": "^8.57.0",
+    "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-security": "^1.4.0",
     "husky": "^4.2.4",
     "jasmine-core": "~3.6.0",
@@ -115,7 +119,8 @@
     "karma-coverage-istanbul-reporter": "~3.0.2",
     "karma-jasmine": "~4.0.0",
     "karma-jasmine-html-reporter": "^1.5.0",
-    "ng-packagr": "^13.1.3",
+    "ng-packagr": "^18.0.0",
+    "node-polyfill-webpack-plugin": "^4.0.0",
     "npm-run-all": "^4.1.5",
     "prettier": "^2.0.4",
     "pretty-quick": "^2.0.1",
@@ -125,7 +130,7 @@
     "tslint": "~6.1.0",
     "tslint-config-prettier": "^1.17.0",
     "tslint-config-swimlane": "^5.0.0",
-    "typescript": "~4.5.4"
+    "typescript": "5.4.5"
   },
   "browser": {
     "fs": false,
