--- a/projects/swimlane/ngx-graph/tsconfig.lib.json
+++ b/projects/swimlane/ngx-graph/tsconfig.lib.json
@@ -3,8 +3,8 @@
   "compilerOptions": {
     "outDir": "../../out-tsc/lib",
     "declarationMap": true,
-    "target": "es2018",
-    "module": "es2015",
+    "target": "ES2022",
+    "module": "ES2020",
     "moduleResolution": "node",
     "declaration": true,
     "sourceMap": true,
@@ -12,7 +12,7 @@
     "experimentalDecorators": true,
     "importHelpers": true,
     "types": [],
-    "lib": ["dom", "es2018"]
+    "lib": ["dom", "ES2022"]
   },
   "angularCompilerOptions": {
     "compilationMode": "partial",
