--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "ng": "ng",
-    "start": "ng serve",
+    "start": "ng run @swimlane/ngx-graph:storybook",
     "build": "ng build",
     "build:lib": "ng build @swimlane/ngx-graph",
     "build:lib:prod": "ng build @swimlane/ngx-graph --configuration production",
@@ -27,23 +27,20 @@
   },
   "license": "MIT",
   "dependencies": {
-    "@angular/animations": "^18.0.0",
-    "@angular/cdk": "^18.0.0",
-    "@angular/common": "^18.0.0",
-    "@angular/compiler": "^18.0.0",
-    "@angular/core": "^18.0.0",
-    "@angular/elements": "^18.0.0",
+    "@angular/animations": "~18.1.0",
+    "@angular/cdk": "~18.1.0",
+    "@angular/common": "~18.1.0",
+    "@angular/compiler": "~18.1.0",
+    "@angular/core": "~18.1.0",
+    "@angular/elements": "~18.1.0",
     "@angular/flex-layout": "15.0.0-beta.42",
-    "@angular/forms": "^18.0.0",
-    "@angular/platform-browser": "^18.0.0",
-    "@angular/platform-browser-dynamic": "^18.0.0",
-    "@angular/router": "^18.0.0",
+    "@angular/forms": "~18.1.0",
+    "@angular/platform-browser": "~18.1.0",
+    "@angular/platform-browser-dynamic": "~18.1.0",
+    "@angular/router": "~18.1.0",
     "@ngx-loading-bar/core": "^4.2.0",
     "@ngx-loading-bar/http-client": "^4.2.0",
     "@stackblitz/sdk": "^1.2.0",
-    "@swimlane/docspa-core": "^8.0.1",
-    "@swimlane/docspa-remark-preset": "^6.0.0",
-    "@swimlane/docspa-stackblitz": "^8.0.0",
     "@types/d3-ease": "^1.0.8",
     "@types/d3-selection": "^1.4.1",
     "@types/d3-shape": "^1.3.1",
@@ -81,19 +78,28 @@
     "zone.js": "~0.14.7"
   },
   "devDependencies": {
-    "@angular-builders/custom-webpack": "18.0.0",
-    "@angular-devkit/build-angular": "^18.0.4",
-    "@angular-devkit/core": "^18.0.0",
-    "@angular-devkit/schematics": "^18.0.0",
-    "@angular-eslint/builder": "^18.0.0",
-    "@angular-eslint/eslint-plugin": "^18.0.0",
-    "@angular-eslint/eslint-plugin-template": "^18.0.0",
-    "@angular-eslint/schematics": "^18.0.0",
-    "@angular-eslint/template-parser": "^18.0.0",
-    "@angular/cli": "^18.0.4",
-    "@angular/compiler-cli": "^18.0.0",
-    "@angular/language-service": "^18.0.0",
+    "@angular-devkit/build-angular": "~18.1.0",
+    "@angular-devkit/core": "~18.1.0",
+    "@angular-devkit/schematics": "~18.1.0",
+    "@angular-eslint/builder": "~18.1.0",
+    "@angular-eslint/eslint-plugin": "~18.1.0",
+    "@angular-eslint/eslint-plugin-template": "~18.1.0",
+    "@angular-eslint/schematics": "~18.1.0",
+    "@angular-eslint/template-parser": "~18.1.0",
+    "@angular/cli": "~18.1.0",
+    "@angular/compiler-cli": "~18.1.0",
+    "@angular/language-service": "~18.1.0",
     "@babel/core": "^7.7.7",
+    "@chromatic-com/storybook": "^1.9.0",
+    "@compodoc/compodoc": "^1.1.26",
+    "@storybook/addon-docs": "^8.3.6",
+    "@storybook/addon-essentials": "^8.3.6",
+    "@storybook/addon-interactions": "^8.3.6",
+    "@storybook/addon-links": "^8.3.6",
+    "@storybook/addon-onboarding": "^8.3.6",
+    "@storybook/angular": "^8.3.6",
+    "@storybook/blocks": "^8.3.6",
+    "@storybook/test": "^8.3.6",
     "@swimlane/eslint-config": "^2.0.0",
     "@swimlane/prettier-config-swimlane": "^3.0.2",
     "@types/jasmine": "~3.6.0",
@@ -111,6 +117,7 @@
     "eslint": "^8.57.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-security": "^1.4.0",
+    "eslint-plugin-storybook": "^0.10.1",
     "husky": "^4.2.4",
     "jasmine-core": "~3.6.0",
     "jasmine-spec-reporter": "~5.0.0",
@@ -119,13 +126,15 @@
     "karma-coverage-istanbul-reporter": "~3.0.2",
     "karma-jasmine": "~4.0.0",
     "karma-jasmine-html-reporter": "^1.5.0",
-    "ng-packagr": "^18.0.0",
+    "ng-packagr": "~18.1.0",
     "node-polyfill-webpack-plugin": "^4.0.0",
     "npm-run-all": "^4.1.5",
     "prettier": "^2.0.4",
     "pretty-quick": "^2.0.1",
     "protractor": "~7.0.0",
+    "rollup": "4.14.3",
     "start-server-and-test": "^1.10.11",
+    "storybook": "^8.3.6",
     "ts-node": "^8.8.2",
     "tslint": "~6.1.0",
     "tslint-config-prettier": "^1.17.0",
@@ -133,19 +142,28 @@
     "typescript": "5.4.5"
   },
   "browser": {
-    "fs": false,
-    "os": false,
     "crypto": false,
-    "stream": false,
+    "fs": false,
     "http": false,
-    "tls": false,
-    "zlib": false,
     "https": false,
-    "net": false
+    "net": false,
+    "os": false,
+    "stream": false,
+    "tls": false,
+    "zlib": false
   },
   "husky": {
     "hooks": {
       "pre-commit": "pretty-quick --staged"
     }
+  },
+  "volta": {
+    "node": "20.17.0"
+  },
+  "packageManager": "yarn@4.5.1",
+  "eslintConfig": {
+    "extends": [
+      "plugin:storybook/recommended"
+    ]
   }
 }
