feat: migrate docs to storybook

--- a/package.json
+++ b/package.json
@@ -92,13 +92,13 @@
     "@babel/core": "^7.7.7",
     "@chromatic-com/storybook": "^1.9.0",
     "@compodoc/compodoc": "^1.1.26",
-    "@storybook/addon-docs": "^8.3.6",
     "@storybook/addon-essentials": "^8.3.6",
     "@storybook/addon-interactions": "^8.3.6",
     "@storybook/addon-links": "^8.3.6",
     "@storybook/addon-onboarding": "^8.3.6",
     "@storybook/angular": "^8.3.6",
     "@storybook/blocks": "^8.3.6",
+    "@storybook/builder-webpack5": "^8.3.6",
     "@storybook/test": "^8.3.6",
     "@swimlane/eslint-config": "^2.0.0",
     "@swimlane/prettier-config-swimlane": "^3.0.2",
