feat: support for markdown tables in docs
feat: input and output docs

fix: org tree styles

feat: demo view with Storybook Controls

--- a/angular.json
+++ b/angular.json
@@ -150,7 +150,7 @@
             "configDir": "projects/swimlane/ngx-graph/.storybook",
             "browserTarget": "@swimlane/ngx-graph:build",
             "compodoc": true,
-            "compodocArgs": ["-e", "json", "-d", "projects/swimlane/ngx-graph"],
+            "compodocArgs": ["-e", "json", "-d", ".", "projects/swimlane/ngx-graph"],
             "port": 6006
           }
         },
@@ -160,7 +160,7 @@
             "configDir": "projects/swimlane/ngx-graph/.storybook",
             "browserTarget": "@swimlane/ngx-graph:build",
             "compodoc": true,
-            "compodocArgs": ["-e", "json", "-d", "projects/swimlane/ngx-graph"],
+            "compodocArgs": ["-e", "json", "-d", ".", "projects/swimlane/ngx-graph"],
             "outputDir": "dist/storybook/@swimlane/ngx-graph"
           }
         }
