--- a/package.json
+++ b/package.json
@@ -5,9 +5,7 @@
   "scripts": {
     "ng": "ng",
     "start": "ng run @swimlane/ngx-graph:storybook",
-    "build": "ng build",
-    "build:lib": "ng build @swimlane/ngx-graph",
-    "build:lib:prod": "ng build @swimlane/ngx-graph --configuration production",
+    "build:lib": "ng build @swimlane/ngx-graph --configuration production",
     "test": "npm run lint",
     "lint": "ng lint",
     "e2e": "ng e2e",
@@ -19,7 +17,7 @@
     "deploy-docs": "angular-cli-ghpages --dir ./dist/ngxGraph",
     "ci": "run-s lint prettier:ci",
     "preversion": "npm run ci",
-    "package": "run-s build:lib:prod copy-files",
+    "package": "run-s build:lib copy-files",
     "prepublish:lib": "npm run package",
     "publish:lib": "npm publish projects/dist/ngx-graph",
     "publish": "run-s publish:lib deploy-docs",
@@ -114,6 +112,7 @@
     "angular-cli-ghpages": "^0.6.2",
     "codelyzer": "^6.0.0",
     "cross-env": "^7.0.2",
+    "elkjs": "^0.9.3",
     "eslint": "^8.57.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-security": "^1.4.0",
@@ -132,6 +131,7 @@
     "prettier": "^2.0.4",
     "pretty-quick": "^2.0.1",
     "protractor": "~7.0.0",
+    "remark-gfm": "^4.0.0",
     "rollup": "4.14.3",
     "start-server-and-test": "^1.10.11",
     "storybook": "^8.3.6",
@@ -139,7 +139,8 @@
     "tslint": "~6.1.0",
     "tslint-config-prettier": "^1.17.0",
     "tslint-config-swimlane": "^5.0.0",
-    "typescript": "5.4.5"
+    "typescript": "5.4.5",
+    "web-worker": "^1.3.0"
   },
   "browser": {
     "crypto": false,
