--- a/package.json
+++ b/package.json
@@ -9,12 +9,10 @@
     "test": "npm run lint",
     "lint": "ng lint",
     "e2e": "ng e2e",
-    "prettier": "prettier --write \"{src,projects}/**/*.{js,ts,scss,css,md,json}\"",
-    "prettier:ci": "prettier --check  \"{src,projects}/**/*.{js,ts,scss,css,md,json}\"",
+    "prettier": "prettier --write \"{projects}/**/*.{js,ts,scss,css,md,json}\"",
+    "prettier:ci": "prettier --check  \"{projects}/**/*.{js,ts,scss,css,md,json}\"",
     "copy-files": "cp README.md projects/dist/ngx-graph/README.md && cp LICENSE projects/dist/ngx-graph/LICENSE",
     "build-docs": "cross-env NODE_ENV=production ng build --configuration production --no-aot --no-build-optimizer --base-href=\"/ngx-graph/\"",
-    "predeploy-docs": "npm run build-docs",
-    "deploy-docs": "angular-cli-ghpages --dir ./dist/ngxGraph",
     "ci": "run-s lint prettier:ci",
     "preversion": "npm run ci",
     "package": "run-s build:lib copy-files",
@@ -80,10 +78,10 @@
     "@angular-devkit/core": "~18.1.0",
     "@angular-devkit/schematics": "~18.1.0",
     "@angular-eslint/builder": "~18.1.0",
-    "@angular-eslint/eslint-plugin": "~18.1.0",
-    "@angular-eslint/eslint-plugin-template": "~18.1.0",
+    "@angular-eslint/eslint-plugin": "^18.4.0",
+    "@angular-eslint/eslint-plugin-template": "^18.4.0",
     "@angular-eslint/schematics": "~18.1.0",
-    "@angular-eslint/template-parser": "~18.1.0",
+    "@angular-eslint/template-parser": "^18.4.0",
     "@angular/cli": "~18.1.0",
     "@angular/compiler-cli": "~18.1.0",
     "@angular/language-service": "~18.1.0",
@@ -136,9 +134,6 @@
     "start-server-and-test": "^1.10.11",
     "storybook": "^8.3.6",
     "ts-node": "^8.8.2",
-    "tslint": "~6.1.0",
-    "tslint-config-prettier": "^1.17.0",
-    "tslint-config-swimlane": "^5.0.0",
     "typescript": "5.4.5",
     "web-worker": "^1.3.0"
   },
