--- a/package.json
+++ b/package.json
@@ -101,10 +101,11 @@
     "@types/jasmine": "~3.6.0",
     "@types/jasminewd2": "~2.0.3",
     "@types/mdast": "^3.0.3",
+    "@types/mocha": "^10.0.9",
     "@types/node": "22.7.3",
     "@types/unist": "^2.0.2",
     "@types/vfile": "^4.0.0",
-    "@typescript-eslint/eslint-plugin": "7.18.0",
+    "@typescript-eslint/eslint-plugin": "^8.12.1",
     "@typescript-eslint/parser": "7.18.0",
     "@typescript-eslint/utils": "7.18.0",
     "angular-cli-ghpages": "^0.6.2",
