--- a/package.json
+++ b/package.json
@@ -5,12 +5,13 @@
   "scripts": {
     "ng": "ng",
     "start": "ng run @swimlane/ngx-graph:storybook",
+    "build:storybook": "ng run @swimlane/ngx-graph:build-storybook",
     "build:lib": "ng build @swimlane/ngx-graph --configuration production",
     "test": "npm run lint",
     "lint": "ng lint",
     "e2e": "ng e2e",
-    "prettier": "prettier --write \"{projects}/**/*.{js,ts,scss,css,md,json}\"",
-    "prettier:ci": "prettier --check  \"{projects}/**/*.{js,ts,scss,css,md,json}\"",
+    "prettier": "prettier --write \"projects/**/*.{js,ts,scss,css,md,mdx,json}\"",
+    "prettier:ci": "prettier --check  \"projects/**/*.{js,ts,scss,css,md,mdx,json}\"",
     "copy-files": "cp README.md projects/dist/ngx-graph/README.md && cp LICENSE projects/dist/ngx-graph/LICENSE",
     "build-docs": "cross-env NODE_ENV=production ng build --configuration production --no-aot --no-build-optimizer --base-href=\"/ngx-graph/\"",
     "ci": "run-s lint prettier:ci",
