--- a/.github/workflows/test_and_deploy.yml
+++ b/.github/workflows/test_and_deploy.yml
@@ -9,27 +9,32 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v2
         with:
-          node-version: 14.x
+          node-version: 20.x
+          cache: 'yarn'
 
-      - name: Install
-        run: npm install --legacy-peer-deps
+      - name: Install Yarn
+        run: npm install -g yarn@4
+
+      - name: Install dependencies
+        run: yarn install
 
       - name: Build
         run: |
-          node --max-old-space-size=4096 `which npm` run build --if-present
+          node --max-old-space-size=4096 yarn build:storybook
         env:
           CI: true
 
       - name: Test
         run: |
-          node --max-old-space-size=4096 `which npm` run ci --if-present
+          node --max-old-space-size=4096 yarn ci
         env:
           CI: true
 
       - name: Prepare and deploy
-        run: |
-          npm run deploy-docs -- --name="Swimlane" --email="swimlane-devops@swimlane.com"
+        uses: peaceiris/actions-gh-pages@v3
+        with:
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          publish_dir: ./dist/storybook/@swimlane/ngx-graph
         if: ${{ github.ref == 'refs/heads/master' }}
         env:
           CI: true
-          GH_TOKEN: ${{ secrets.GH_TOKEN }}
