--- a/.github/workflows/test_and_deploy.yml
+++ b/.github/workflows/test_and_deploy.yml
@@ -10,7 +10,7 @@ jobs:
         uses: actions/checkout@v4.2.0
 
       - name: Setup Node.js
-        run: actions/setup-node@v3
+        uses: actions/setup-node@v3
         with:
           node-version: 20.x
 
@@ -34,10 +34,10 @@ jobs:
           CI: true
 
       - name: Prepare and deploy
+        if: ${{ github.ref == 'refs/heads/master' }}
         uses: peaceiris/actions-gh-pages@v3
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           publish_dir: ./dist/storybook/@swimlane/ngx-graph
-        if: ${{ github.ref == 'refs/heads/master' }}
         env:
           CI: true
