--- a/.github/workflows/test_and_deploy.yml
+++ b/.github/workflows/test_and_deploy.yml
@@ -2,9 +2,8 @@ name: Build, Test, and Deploy
 
 on: [push]
 jobs:
-  build:
+  run:
     runs-on: ubuntu-latest
-
     steps:
       - name: Checkout
         uses: actions/checkout@v4.2.0
@@ -18,7 +17,7 @@ jobs:
         run: corepack enable
 
       - name: Install Yarn
-        run: corepack prepare yarn@4.5.0 --activate
+        run: corepack prepare yarn@4.5.1 --activate
 
       - name: Install dependencies
         run: yarn install --immutable
