--- a/package.json
+++ b/package.json
@@ -75,6 +75,7 @@
     "zone.js": "~0.14.7"
   },
   "devDependencies": {
+    "@angular-devkit/architect": "^0.1802.11",
     "@angular-devkit/build-angular": "~18.1.0",
     "@angular-devkit/core": "~18.1.0",
     "@angular-devkit/schematics": "~18.1.0",
@@ -99,7 +100,7 @@
     "@storybook/test": "^8.3.6",
     "@swimlane/eslint-config": "^2.0.0",
     "@swimlane/prettier-config-swimlane": "^3.0.2",
-    "@types/jasmine": "~3.6.0",
+    "@types/jasmine": ">=3.8.0",
     "@types/jasminewd2": "~2.0.3",
     "@types/mdast": "^3.0.3",
     "@types/mocha": "^10.0.9",
@@ -107,10 +108,10 @@
     "@types/unist": "^2.0.2",
     "@types/vfile": "^4.0.0",
     "@typescript-eslint/eslint-plugin": "^8.12.1",
-    "@typescript-eslint/parser": "7.18.0",
+    "@typescript-eslint/parser": "^8.0.0",
+    "@typescript-eslint/types": "^8.12.2",
     "@typescript-eslint/utils": "7.18.0",
     "angular-cli-ghpages": "^0.6.2",
-    "codelyzer": "^6.0.0",
     "cross-env": "^7.0.2",
     "elkjs": "^0.9.3",
     "eslint": "^8.57.0",
@@ -118,7 +119,7 @@
     "eslint-plugin-security": "^1.4.0",
     "eslint-plugin-storybook": "^0.10.1",
     "husky": "^4.2.4",
-    "jasmine-core": "~3.6.0",
+    "jasmine-core": ">=3.8.0",
     "jasmine-spec-reporter": "~5.0.0",
     "karma": "~6.3.14",
     "karma-chrome-launcher": "~3.1.0",
@@ -137,7 +138,8 @@
     "storybook": "^8.3.6",
     "ts-node": "^8.8.2",
     "typescript": "5.4.5",
-    "web-worker": "^1.3.0"
+    "web-worker": "^1.3.0",
+    "webpack": "5"
   },
   "browser": {
     "crypto": false,
