--- a/package.json
+++ b/package.json
@@ -90,6 +90,7 @@
     "@babel/core": "^7.7.7",
     "@chromatic-com/storybook": "^1.9.0",
     "@compodoc/compodoc": "^1.1.26",
+    "@storybook/addon-docs": "^8.4.0",
     "@storybook/addon-essentials": "^8.3.6",
     "@storybook/addon-interactions": "^8.3.6",
     "@storybook/addon-links": "^8.3.6",
