--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "d3-dispatch": "^3.0.1",
     "d3-ease": "^3.0.1",
     "d3-force": "^3.0.0",
+    "d3-scale": "^4.0.2",
     "d3-selection": "^3.0.0",
     "d3-shape": "^3.2.0",
     "d3-timer": "^3.0.1",
@@ -101,6 +102,7 @@
     "@storybook/test": "^8.3.6",
     "@swimlane/eslint-config": "^2.0.0",
     "@swimlane/prettier-config-swimlane": "^3.0.2",
+    "@types/d3-scale": "^4",
     "@types/jasmine": ">=3.8.0",
     "@types/jasminewd2": "~2.0.3",
     "@types/mdast": "^3.0.3",
