fix: missing types

--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "@ungap/global-this": "^0.3.1",
     "ajv": "8.12.0",
     "core-js": "^2.6.11",
+    "d3-array": "^3.2.4",
     "d3-dispatch": "^3.0.1",
     "d3-ease": "^3.0.1",
     "d3-force": "^3.0.0",
@@ -102,12 +103,13 @@
     "@storybook/test": "^8.3.6",
     "@swimlane/eslint-config": "^2.0.0",
     "@swimlane/prettier-config-swimlane": "^3.0.2",
+    "@types/d3-array": "^3",
     "@types/d3-scale": "^4",
     "@types/jasmine": ">=3.8.0",
     "@types/jasminewd2": "~2.0.3",
     "@types/mdast": "^3.0.3",
     "@types/mocha": "^10.0.9",
-    "@types/node": "22.7.3",
+    "@types/node": "^22.8.6",
     "@types/unist": "^2.0.2",
     "@types/vfile": "^4.0.0",
     "@typescript-eslint/eslint-plugin": "^8.12.1",
