--- a/projects/swimlane/ngx-graph/.storybook/tsconfig.json
+++ b/projects/swimlane/ngx-graph/.storybook/tsconfig.json
@@ -2,6 +2,7 @@
   "extends": "../tsconfig.lib.json",
   "compilerOptions": {
     "types": ["node"],
+    "typeRoots": ["node_modules/@types"],
     "allowSyntheticDefaultImports": true,
     "resolveJsonModule": true
   },
