--- a/projects/swimlane/ngx-graph/.storybook/tsconfig.json
+++ b/projects/swimlane/ngx-graph/.storybook/tsconfig.json
@@ -1,8 +1,8 @@
 {
-  "extends": "../tsconfig.lib.json",
+  "extends": "../../../../tsconfig.json",
   "compilerOptions": {
     "types": ["node"],
-    "typeRoots": ["node_modules/@types"],
+    "typeRoots": ["../../../../node_modules/@types"],
     "allowSyntheticDefaultImports": true,
     "resolveJsonModule": true
   },
