--- a/package.json
+++ b/package.json
@@ -163,7 +163,8 @@
     }
   },
   "volta": {
-    "node": "20.17.0"
+    "node": "20.17.0",
+    "yarn": "4.5.1"
   },
   "packageManager": "yarn@4.5.1",
   "eslintConfig": {
