--- a/package.json
+++ b/package.json
@@ -101,6 +101,7 @@
     "@storybook/blocks": "^8.3.6",
     "@storybook/builder-webpack5": "^8.3.6",
     "@storybook/test": "^8.3.6",
+    "@storybook/theming": "^8.4.1",
     "@swimlane/eslint-config": "^2.0.0",
     "@swimlane/prettier-config-swimlane": "^3.0.2",
     "@types/d3-array": "^3",
@@ -110,6 +111,7 @@
     "@types/mdast": "^3.0.3",
     "@types/mocha": "^10.0.9",
     "@types/node": "^22.8.6",
+    "@types/react": "^18",
     "@types/unist": "^2.0.2",
     "@types/vfile": "^4.0.0",
     "@typescript-eslint/eslint-plugin": "^8.12.1",
@@ -123,6 +125,7 @@
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-security": "^1.4.0",
     "eslint-plugin-storybook": "^0.10.1",
+    "http": "^0.0.1-security",
     "husky": "^4.2.4",
     "jasmine-core": ">=3.8.0",
     "jasmine-spec-reporter": "~5.0.0",
@@ -131,12 +134,14 @@
     "karma-coverage-istanbul-reporter": "~3.0.2",
     "karma-jasmine": "~4.0.0",
     "karma-jasmine-html-reporter": "^1.5.0",
+    "net": "^1.0.2",
     "ng-packagr": "~18.1.0",
     "node-polyfill-webpack-plugin": "^4.0.0",
     "npm-run-all": "^4.1.5",
     "prettier": "^2.0.4",
     "pretty-quick": "^2.0.1",
     "protractor": "~7.0.0",
+    "react": "^18.3.1",
     "remark-gfm": "^4.0.0",
     "rollup": "4.14.3",
     "start-server-and-test": "^1.10.11",
