--- a/package.json
+++ b/package.json
@@ -35,13 +35,26 @@
     "@angular/platform-browser": "~18.1.0",
     "@angular/platform-browser-dynamic": "~18.1.0",
     "@angular/router": "~18.1.0",
+    "@chromatic-com/storybook": "^3.2.2",
+    "@compodoc/compodoc": "^1.1.26",
     "@ngx-loading-bar/core": "^4.2.0",
     "@ngx-loading-bar/http-client": "^4.2.0",
     "@stackblitz/sdk": "^1.2.0",
+    "@storybook/addon-docs": "^8.4.1",
+    "@storybook/addon-essentials": "^8.4.1",
+    "@storybook/addon-interactions": "^8.4.1",
+    "@storybook/addon-links": "^8.4.1",
+    "@storybook/addon-onboarding": "^8.4.1",
+    "@storybook/angular": "^8.4.1",
+    "@storybook/blocks": "^8.4.1",
+    "@storybook/builder-webpack5": "^8.4.1",
+    "@storybook/test": "^8.4.1",
+    "@storybook/theming": "^8.4.1",
     "@types/d3-ease": "^1.0.8",
     "@types/d3-selection": "^1.4.1",
     "@types/d3-shape": "^1.3.1",
     "@types/d3-transition": "^3.0.2",
+    "@types/node": "^22.8.6",
     "@ungap/custom-elements": "^0.1.12",
     "@ungap/global-this": "^0.3.1",
     "ajv": "8.12.0",
@@ -57,6 +70,7 @@
     "d3-transition": "^3.0.1",
     "dagre": "^0.8.5",
     "deepmerge": "^4.2.2",
+    "eslint-plugin-storybook": "^0.10.2",
     "json-schema": "^0.4.0",
     "jsprim": "^1.4.2",
     "mdast": "^3.0.0",
@@ -65,8 +79,10 @@
     "path": "^0.12.7",
     "process": "^0.11.10",
     "quick-lru": "^4.0.1",
+    "react-dom": "^18.3.1",
     "rxjs": "7.8.1",
     "smoothscroll-polyfill": "^0.4.3",
+    "storybook": "^8.4.1",
     "throttleit": "^1.0.0",
     "transformation-matrix": "^2.16.1",
     "tslib": "^2.3.1",
@@ -90,18 +106,6 @@
     "@angular/compiler-cli": "~18.1.0",
     "@angular/language-service": "~18.1.0",
     "@babel/core": "^7.7.7",
-    "@chromatic-com/storybook": "^1.9.0",
-    "@compodoc/compodoc": "^1.1.26",
-    "@storybook/addon-docs": "^8.4.0",
-    "@storybook/addon-essentials": "^8.3.6",
-    "@storybook/addon-interactions": "^8.3.6",
-    "@storybook/addon-links": "^8.3.6",
-    "@storybook/addon-onboarding": "^8.3.6",
-    "@storybook/angular": "^8.3.6",
-    "@storybook/blocks": "^8.3.6",
-    "@storybook/builder-webpack5": "^8.3.6",
-    "@storybook/test": "^8.3.6",
-    "@storybook/theming": "^8.4.1",
     "@swimlane/eslint-config": "^2.0.0",
     "@swimlane/prettier-config-swimlane": "^3.0.2",
     "@types/d3-array": "^3",
@@ -110,8 +114,8 @@
     "@types/jasminewd2": "~2.0.3",
     "@types/mdast": "^3.0.3",
     "@types/mocha": "^10.0.9",
-    "@types/node": "^22.8.6",
     "@types/react": "^18",
+    "@types/react-dom": "^18",
     "@types/unist": "^2.0.2",
     "@types/vfile": "^4.0.0",
     "@typescript-eslint/eslint-plugin": "^8.12.1",
@@ -124,7 +128,6 @@
     "eslint": "^8.57.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-security": "^1.4.0",
-    "eslint-plugin-storybook": "^0.10.1",
     "http": "^0.0.1-security",
     "husky": "^4.2.4",
     "jasmine-core": ">=3.8.0",
@@ -145,22 +148,10 @@
     "remark-gfm": "^4.0.0",
     "rollup": "4.14.3",
     "start-server-and-test": "^1.10.11",
-    "storybook": "^8.3.6",
     "ts-node": "^8.8.2",
     "typescript": "5.4.5",
     "web-worker": "^1.3.0",
     "webpack": "5"
-  },
-  "browser": {
-    "crypto": false,
-    "fs": false,
-    "http": false,
-    "https": false,
-    "net": false,
-    "os": false,
-    "stream": false,
-    "tls": false,
-    "zlib": false
   },
   "husky": {
     "hooks": {
