--- a/package.json
+++ b/package.json
@@ -35,30 +35,6 @@
     "@angular/platform-browser": "~18.1.0",
     "@angular/platform-browser-dynamic": "~18.1.0",
     "@angular/router": "~18.1.0",
-    "@chromatic-com/storybook": "^3.2.2",
-    "@compodoc/compodoc": "^1.1.26",
-    "@ngx-loading-bar/core": "^4.2.0",
-    "@ngx-loading-bar/http-client": "^4.2.0",
-    "@stackblitz/sdk": "^1.2.0",
-    "@storybook/addon-docs": "^8.4.1",
-    "@storybook/addon-essentials": "^8.4.1",
-    "@storybook/addon-interactions": "^8.4.1",
-    "@storybook/addon-links": "^8.4.1",
-    "@storybook/addon-onboarding": "^8.4.1",
-    "@storybook/angular": "^8.4.1",
-    "@storybook/blocks": "^8.4.1",
-    "@storybook/builder-webpack5": "^8.4.1",
-    "@storybook/test": "^8.4.1",
-    "@storybook/theming": "^8.4.1",
-    "@types/d3-ease": "^1.0.8",
-    "@types/d3-selection": "^1.4.1",
-    "@types/d3-shape": "^1.3.1",
-    "@types/d3-transition": "^3.0.2",
-    "@types/node": "^22.8.6",
-    "@ungap/custom-elements": "^0.1.12",
-    "@ungap/global-this": "^0.3.1",
-    "ajv": "8.12.0",
-    "core-js": "^2.6.11",
     "d3-array": "^3.2.4",
     "d3-dispatch": "^3.0.1",
     "d3-ease": "^3.0.1",
@@ -69,26 +45,12 @@
     "d3-timer": "^3.0.1",
     "d3-transition": "^3.0.1",
     "dagre": "^0.8.5",
-    "deepmerge": "^4.2.2",
-    "eslint-plugin-storybook": "^0.10.2",
-    "json-schema": "^0.4.0",
-    "jsprim": "^1.4.2",
-    "mdast": "^3.0.0",
-    "mermaid": "^8.13.8",
     "msagl-js": "0.0.51",
-    "path": "^0.12.7",
-    "process": "^0.11.10",
-    "quick-lru": "^4.0.1",
+    "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "rxjs": "7.8.1",
-    "smoothscroll-polyfill": "^0.4.3",
-    "storybook": "^8.4.1",
-    "throttleit": "^1.0.0",
     "transformation-matrix": "^2.16.1",
     "tslib": "^2.3.1",
-    "url-resolve": "^1.0.0",
-    "vfile": "^4.0.0",
-    "vfile-reporter": "^5.1.1",
     "webcola": "^3.4.0",
     "zone.js": "~0.14.7"
   },
@@ -106,14 +68,31 @@
     "@angular/compiler-cli": "~18.1.0",
     "@angular/language-service": "~18.1.0",
     "@babel/core": "^7.7.7",
+    "@chromatic-com/storybook": "^3.2.2",
+    "@compodoc/compodoc": "^1.1.26",
+    "@storybook/addon-docs": "^8.4.1",
+    "@storybook/addon-essentials": "^8.4.1",
+    "@storybook/addon-interactions": "^8.4.1",
+    "@storybook/addon-links": "^8.4.1",
+    "@storybook/addon-onboarding": "^8.4.1",
+    "@storybook/angular": "^8.4.1",
+    "@storybook/blocks": "^8.4.1",
+    "@storybook/builder-webpack5": "^8.4.1",
+    "@storybook/test": "^8.4.1",
+    "@storybook/theming": "^8.4.1",
     "@swimlane/eslint-config": "^2.0.0",
     "@swimlane/prettier-config-swimlane": "^3.0.2",
     "@types/d3-array": "^3",
+    "@types/d3-ease": "^1.0.8",
     "@types/d3-scale": "^4",
+    "@types/d3-selection": "^1.4.1",
+    "@types/d3-shape": "^1.3.1",
+    "@types/d3-transition": "^3.0.2",
     "@types/jasmine": ">=3.8.0",
     "@types/jasminewd2": "~2.0.3",
     "@types/mdast": "^3.0.3",
     "@types/mocha": "^10.0.9",
+    "@types/node": "^22.8.6",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "@types/unist": "^2.0.2",
@@ -124,11 +103,10 @@
     "@typescript-eslint/utils": "7.18.0",
     "angular-cli-ghpages": "^0.6.2",
     "cross-env": "^7.0.2",
-    "elkjs": "^0.9.3",
     "eslint": "^8.57.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-security": "^1.4.0",
-    "http": "^0.0.1-security",
+    "eslint-plugin-storybook": "^0.10.2",
     "husky": "^4.2.4",
     "jasmine-core": ">=3.8.0",
     "jasmine-spec-reporter": "~5.0.0",
@@ -137,20 +115,16 @@
     "karma-coverage-istanbul-reporter": "~3.0.2",
     "karma-jasmine": "~4.0.0",
     "karma-jasmine-html-reporter": "^1.5.0",
-    "net": "^1.0.2",
     "ng-packagr": "~18.1.0",
-    "node-polyfill-webpack-plugin": "^4.0.0",
     "npm-run-all": "^4.1.5",
     "prettier": "^2.0.4",
     "pretty-quick": "^2.0.1",
     "protractor": "~7.0.0",
-    "react": "^18.3.1",
     "remark-gfm": "^4.0.0",
     "rollup": "4.14.3",
     "start-server-and-test": "^1.10.11",
-    "ts-node": "^8.8.2",
-    "typescript": "5.4.5",
-    "web-worker": "^1.3.0",
+    "storybook": "^8.4.1",
+    "typescript": "~5.5.2",
     "webpack": "5"
   },
   "husky": {
