--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,28 +1,35 @@
 {
   "compileOnSave": false,
   "compilerOptions": {
-    "baseUrl": "./",
+    "baseUrl": ".",
     "outDir": "./dist/out-tsc",
+    "noImplicitOverride": true,
+    "noPropertyAccessFromIndexSignature": true,
+    "noImplicitReturns": true,
+    "skipLibCheck": true,
+    "isolatedModules": true,
+    "types": ["node", "jasmine"],
+    "typeRoots": ["node_modules/@types"],
+    "esModuleInterop": true,
     "sourceMap": true,
     "declaration": false,
-    "module": "ES2020",
-    "moduleResolution": "node",
     "experimentalDecorators": true,
+    "moduleResolution": "bundler",
+    "importHelpers": true,
     "target": "ES2022",
-    "typeRoots": ["./node_modules/@types"],
+    "module": "ES2022",
     "lib": ["ES2022", "dom"],
-    "allowSyntheticDefaultImports": true,
-    "esModuleInterop": true,
-    "resolveJsonModule": true,
     "paths": {
       "@swimlane/ngx-graph": ["projects/swimlane/ngx-graph/src/public_api"],
       "@swimlane/ngx-graph/*": ["projects/swimlane/ngx-graph/src/*"]
-    },
-    "types": ["node", "jasmine"]
+    }
   },
   "include": ["./projects/**/*.ts", "**/*.d.ts", ".storybook/*.ts", "**/*.spec.ts"],
   "exclude": ["**/*.e2e-spec.ts"],
   "angularCompilerOptions": {
-    "fullTemplateTypeCheck": true
+    "enableI18nLegacyMessageIdFormat": false,
+    "strictInjectionParameters": true,
+    "strictInputAccessModifiers": true,
+    "strictTemplates": true
   }
 }
