--- a/package.json
+++ b/package.json
@@ -12,14 +12,13 @@
     "e2e": "ng e2e",
     "prettier": "prettier --write \"projects/**/*.{js,ts,scss,css,md,mdx,json}\"",
     "prettier:ci": "prettier --check  \"projects/**/*.{js,ts,scss,css,md,mdx,json}\"",
-    "copy-files": "cp README.md projects/dist/ngx-graph/README.md && cp LICENSE projects/dist/ngx-graph/LICENSE",
-    "build-docs": "cross-env NODE_ENV=production ng build --configuration production --no-aot --no-build-optimizer --base-href=\"/ngx-graph/\"",
+    "copy-files": "cp README.md dist/ngx-graph/README.md && cp LICENSE dist/ngx-graph/LICENSE && cp CHANGELOG.md dist/ngx-graph/CHANGELOG.md",
     "ci": "run-s lint prettier:ci",
     "preversion": "npm run ci",
     "package": "run-s build:lib copy-files",
     "prepublish:lib": "npm run package",
     "publish:lib": "npm publish projects/dist/ngx-graph",
-    "publish": "run-s publish:lib deploy-docs",
+    "publish": "run-s publish:lib",
     "prepublishOnly": "echo \"This is the workspace -- you probably meant run 'npm run publish'.\" && exit 1"
   },
   "license": "MIT",
@@ -48,7 +47,7 @@
     "msagl-js": "0.0.51",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "rxjs": "7.8.1",
+    "rxjs": "^7.8.1",
     "transformation-matrix": "^2.16.1",
     "tslib": "^2.3.1",
     "webcola": "^3.4.0",
@@ -143,6 +142,6 @@
     ]
   },
   "resolutions": {
-    "typescript": "5.4.5"
+    "typescript": "5.5.2"
   }
 }
